<resources>
    <string name="app_name">JobScheduler</string>
    <string name="job_service">Job Service</string>
    <string name="content_text_notify">Here is a job service</string>
    <string name="primary_channel_description">Notification Job Service</string>
    <string name="primary_channel_name">Primary Channel</string>
    <string name="text_title">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="requires">Requires:</string>
    <string name="title_3">Override Deadline: </string>
    <string name="not_set">Not set </string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
</resources>